[REFACTOR] Product 모듈 아키텍처 리팩토링 및 성능 최적화 (#247) (#286)
* refactor: 파일 구조 리팩토링 - #247

* refactor: 요청 Dto 클래스 구조 재구성 - #247

* refactor: 중복되는 브랜드 요청 데이터 통합 - #247

- 브랜드 변수명 통합을 위한 logo -> image 변경
- 브랜드, 카테고리, 상품 기본 정보 요청 데이터에 한해서 적용

* refactor: 역할에 따른 클래스명 명확성 확보-  #247

* refactor: 매퍼 클래스 리팩토링 - #247

- 응답 반환용 헬퍼 메소드 대체

* refactor: UseCase 메소드 파라미터 리팩토링 - #247

- RequestDto를 UseCase에서 사용 X
- 커맨드 객체 및 매퍼 클래스 도입으로 UseCase 파라미터 대체
- ProductDto의 옵션 값을 OptionDto로 대체 (응답 획일화)
- 상품 상세 조회 응답 모델 Dto 추가
- findOptionValues 제거: 조회는 각 UseCase에서 실행

* refactor: QueryDSL의 @EntityGraph 도입을 통한 N+1 문제 방지 - #247

대상 Repository 및 최적화 포인트:

- ProductRepository
  - findAllByProductInfo(ProductInfo productInfo): ProductUseCase의 상품 조회 및 일괄 업데이트 시, 각 Product 엔티티의 productInfo 필드 접근에 따른 N+1 문제 해결.

- ProductOptionValuesRepository
  - findAllByProductIn(List<Product> products): 상품 조회 시 DTO 매핑 및 그룹핑 과정에서 product, optionValue, optionValue.optionGroup 필드에 대한 중복 쿼리 방지.

- ProductImageRepository
  - findAllByProductIn(List<Product> products): 상품 이미지 그룹핑 로직 실행 시, 각 ProductImage 엔티티의 product 필드 접근 최적화.

- OptionValueRepository
  - findAllByOptionGroupIn(List<OptionGroup> optionGroups): 옵션 조회 시 OptionValue를 optionGroup으로 그룹핑할 때 발생하는 연관 필드 쿼리 최적화.

- ProductInfoRepository
  - findById(Long productInfoId): 상품 상세 조회 및 DTO 변환 과정(productInfoMapper.toDto)에서 brand 및 category 필드 접근 시 발생하는 성능 저하 해결.

* refactor: rebase 후 이미지 업로드 API 파일 위치 이동 - #247

* refactor: 카프카 이벤트 구조 변경 - #247

- 발행과 구독 사이의 의존성을 제거하기 위해 공통 객체 사용 X
- 따라서, String 타입으로 역직렬화한 후 JsonMapper 를 통해 필요한 데이터만 추출
- Payload 매퍼 메소드 추가

* refactor: 데이터 유효성 검증 및 명세화를 위한 Validation 추가 - #247

* refactor: 이벤트 발행 및 구독 시, 데이터 검증 추가 - #247

* fix: 미사용 import 제거 - #247

* fix: Spring validation이 사용되도록 수정 - #247

- private 메소드는 프록시가 인터셉트하지 못하므로 pulbic 메소드로 변경